tests/pkg/assets/install1/gold/install.gold
exec main.toit

STDERR---
main.toit:5:8: error: Package for prefix 'pkg' not found
import pkg
       ^~~
main.toit:8:7: error: Unresolved identifier: 'say-hello'
  pkg.say-hello
      ^~~~~~~~~
Compilation failed
Exit Code: 1
==================
OK
[pkg, install, --local, pkg]
Package 'pkg' installed with prefix 'pkg'.
==================
exec main.toit
hello from pkg
Exit Code: 0
==================
// Install with a prefix
==================
OK
[pkg, install, --local, --prefix=prepkg, pkg2]
Package 'pkg2' installed with prefix 'prepkg'.
==================
exec main2.toit
hello from pkg2
Exit Code: 0
==================
// Installing again yields an error.
==================
OK
[pkg, install, --local, pkg]
Package 'pkg' installed with prefix 'pkg'.
==================
// Installing a package where the directory name is not the package name.
==================
OK
[pkg, install, --local, pkg3]
Package 'pkg3' installed with prefix 'pkg3_modified'.
==================
exec main3.toit
hello from pkg3_modified
Exit Code: 0
==================
== package.yaml
dependencies:
  pkg:
    path: pkg
  prepkg:
    path: pkg2
  pkg3_modified:
    path: pkg3
==================
== package.lock
prefixes:
  pkg: pkg
  prepkg: pkg2
  pkg3_modified: pkg3
packages:
  pkg:
    path: pkg
  pkg2:
    path: pkg2
  pkg3:
    path: pkg3
